--- a/shippable.yml
+++ b/shippable.yml
@@ -1,7 +1,7 @@
 language: python
 python:
   - 3.4
-  - 2.7
+ # - 2.7
 
 env:
   global:
@@ -10,6 +10,11 @@ env:
   matrix:
     - M1=ONE
 
+matrix:
+  include:
+    - python: 2.7
+      env: TEST=FOO
+      
 build:
   
   pre_ci_boot:
